MVP: remote directory browser, SSH key setup, help, and UX improvements
- Add remote directory browser (Browse Remote button) for interactive
  remote folder selection via SSH QuickPick
- Add SSH key generation and installation from within the extension
- Add Help page with usage instructions and troubleshooting
- Add SSH keepalive (ServerAliveInterval=60) to all connections
- Add delete confirmation dialog for destructive sync operations
- Implement scp delete support (clean remote dir before copy)
- Fix CSP: replace inline onclick handlers with addEventListener
- Relax validation: remote project dir no longer required to save
- Guard against syncing to / or empty remote path

--- a/package.json
+++ b/package.json
@@ -61,6 +61,16 @@
       {
         "command": "hpc-sync.cancelSync",
         "title": "HPC Sync: Cancel Sync"
+      },
+      {
+        "command": "hpc-sync.setupSshKey",
+        "title": "HPC Sync: Setup SSH Key",
+        "icon": "$(key)"
+      },
+      {
+        "command": "hpc-sync.showHelp",
+        "title": "HPC Sync: Help",
+        "icon": "$(question)"
       }
     ],
     "configuration": {
